--- a/templates/nginx_errorlog.conf.j2
+++ b/templates/nginx_errorlog.conf.j2
@@ -1,4 +1,4 @@
-{% for host in nginx_vhosts | default([]) %}
+{% for host in netdata.monitored_vhosts | default([]) %}
 {{ host.hostname }}:
   name: {{ host.hostname }}:
   path: '/var/log/nginx/{{ host.hostname }}-error.log'
