--- a/templates/web_log.conf.j2
+++ b/templates/web_log.conf.j2
@@ -85,8 +85,8 @@
 #          time_multiplier: 1000000       # type <int>/<float> - convert time to microseconds
 #     histogram: [1,3,10,30,100, ...]      # type list of int - Cumulative histogram of response time in milli seconds
 {% for host in netdata.monitored_vhosts | default([]) %}
-{{ host.hostname }}:
-  name: "{{ host.hostname }}"
+{{ host.name | default(host.hostname) }}:
+  name: "{{ host.name | default(host.hostname) }}"
   path: '/var/log/nginx/{{ host.hostname }}-access.log'
   detailed_response_codes: yes
 {% if host.logfile_format is defined %}
