switch from dictionary variables to underscore

--- a/templates/health_alarm_notify.conf.j2
+++ b/templates/health_alarm_notify.conf.j2
@@ -1,3 +1,3 @@
-{% if netdata.health_alarm_notify is defined and netdata.health_alarm_notify %}
-{{ netdata.health_alarm_notify }}
+{% if netdata_health_alarm_notify is defined and netdata_health_alarm_notify %}
+{{ netdata_health_alarm_notify }}
 {% endif %}
