--- a/templates/web_log.conf.j2
+++ b/templates/web_log.conf.j2
@@ -84,7 +84,7 @@
 #          pattern: '(?P<address>[\da-f.:]+) -.*?"(?P<method>[A-Z]+) (?P<url>.*?)" (?P<code>[1-9]\d{2}) (?P<bytes_sent>\d+) (?P<resp_length>\d+) (?P<resp_time>\d+\.\d+) '
 #          time_multiplier: 1000000       # type <int>/<float> - convert time to microseconds
 #     histogram: [1,3,10,30,100, ...]      # type list of int - Cumulative histogram of response time in milli seconds
-{% for host in netdata.monitored_vhosts | default([]) %}
+{% for host in netdata_monitored_vhosts | default([]) %}
 {{ host.name | default(host.hostname) }}:
   name: "{{ host.name | default(host.hostname) }}"
   path: '/var/log/nginx/{{ host.hostname }}-access.log'
